# agno

./: ONBOARDING_KR.md  benchmark_document.py  contributions_and_community.md  core_architecture.md  features_and_usage.md  glossary.md  performance_considerations.md  project_overview.md  setup_and_getting_started.md  test_document_ffi.py
rust_project/: .gitignore  Cargo.toml
rust_project/document/: Cargo.toml  README.md
rust_project/document/src/: lib.rs
rust_project/knowledge/: Cargo.toml
rust_project/knowledge/src/: lib.rs
rust_project/memory/: Cargo.toml
rust_project/memory/src/: lib.rs
rust_project/vectordb/: Cargo.toml
rust_project/vectordb/src/: lib.rs
