[package]
name = "document"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"] # Added "rlib"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }

[dev-dependencies]
