[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
document = { path = "../document" } # Reverted
# document_rs = { package = "document", path = "../document" } # Removed
vectordb = { path = "../vectordb" }

[dev-dependencies]
