[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
document = { path = "../document" } # Reverted to this
# document_rs = { package = "document", path = "../document" } # Removed
async-trait = "0.1"
serde_json = "1.0"

[dev-dependencies]
